# enroute-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  repomix.config.json
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: devtools.yml  version.yml
compose/: kafka.yml
enroute/: Cargo.toml  README.md
enroute-core/: Cargo.toml  README.md
enroute-core/src/: broker.rs  consumer.rs  envelope.rs  error.rs  event.rs  lib.rs  publisher.rs
enroute-kafka/: Cargo.toml  README.md
enroute-kafka/src/: broker.rs  consumer.rs  lib.rs  publisher.rs
enroute-macros/: Cargo.toml  README.md
enroute-macros/src/: lib.rs
enroute-memory/: Cargo.toml
enroute-memory/src/: acker.rs  broker.rs  consumer.rs  inner.rs  lib.rs  publisher.rs
enroute/src/: lib.rs
