[package]
name = "enroute"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
enroute-macros = { path = "../enroute-macros", version = "0.1.0" }
enroute-core = { path = "../enroute-core", version = "0.1.0" }
enroute-memory = { path = "../enroute-memory", version = "0.1.0" }
enroute-kafka = { path = "../enroute-kafka", version = "0.1.0", optional = true }

[features]
kafka = ["dep:enroute-kafka"]